js/src/tests/test262/built-ins/Error/prototype/stack/getter-no-error-data.js


















var get = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').get;

var receivers = [
  ['plain object', {}],
  ['null-prototype object', { __proto__: null }],
  ['array', []],
  ['function', function () {}],
  ['RegExp', /re/],
  ['Date', new Date()],
  ['Boolean wrapper', new Boolean(true)],
  ['Number wrapper', new Number(0)],
  ['String wrapper', new String('')],
  typeof ArrayBuffer === 'undefined' ? null : ['ArrayBuffer', new ArrayBuffer(0)],
  typeof Map === 'undefined' ? null : ['Map', new Map()],
  typeof Set === 'undefined' ? null : ['Set', new Set()],
  typeof WeakMap === 'undefined' ? null : ['WeakMap', new WeakMap()],
  typeof WeakSet === 'undefined' ? null : ['WeakSet', new WeakSet()],
  typeof Promise === 'undefined' ? null : ['Promise', new Promise(function () {})],
  typeof Int8Array === 'undefined' ? null : ['TypedArray', new Int8Array()]
];

for (var i = 0; i < receivers.length; ++i) {
  if (!receivers[i]) continue;
  var label = receivers[i][0];
  var value = receivers[i][1];
  assert.sameValue(get.call(value), undefined, label);
}



var fakeError = Object.create(Error.prototype);
assert.sameValue(get.call(fakeError), undefined, 'object with Error.prototype on its prototype chain');

var fakeErrorWithStack = Object.create(Error.prototype);
Object.defineProperty(fakeErrorWithStack, 'stack', { value: 'imposter', writable: true, enumerable: true, configurable: true });
assert.sameValue(
  get.call(fakeErrorWithStack),
  undefined,
  'an existing own "stack" data property is ignored by the getter on a non-Error object'
);

reportCompare(0, 0);
